--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
-    <meta
-      name="author"
-      content="Mark Otto, Jacob Thornton, and Bootstrap contributors"
-    />
-    <meta name="generator" content="Hugo 0.108.0" />
-    <title>Cover Template · Bootstrap v5.3</title>
-
-    <link
-      rel="canonical"
-      href="https://getbootstrap.com/docs/5.3/examples/cover/"
-    />
+    <title>itsbillw - Home</title>
 
     <link
       rel="stylesheet"
@@ -22,30 +12,6 @@
       href="{{ url_for('static', filename='css/bootstrap.min.css') }}"
     />
 
-    <!-- Favicons -->
-    <link
-      rel="apple-touch-icon"
-      href="/docs/5.3/assets/img/favicons/apple-touch-icon.png"
-      sizes="180x180"
-    />
-    <link
-      rel="icon"
-      href="/docs/5.3/assets/img/favicons/favicon-32x32.png"
-      sizes="32x32"
-      type="image/png"
-    />
-    <link
-      rel="icon"
-      href="/docs/5.3/assets/img/favicons/favicon-16x16.png"
-      sizes="16x16"
-      type="image/png"
-    />
-    <link rel="manifest" href="/docs/5.3/assets/img/favicons/manifest.json" />
-    <link
-      rel="mask-icon"
-      href="/docs/5.3/assets/img/favicons/safari-pinned-tab.svg"
-      color="#712cf9"
-    />
     <link
       rel="icon"
       href="{{ url_for('static', filename='images/tukibill-icon.png') }}"
@@ -117,7 +83,7 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="mb-auto">
         <div>
-          <h3 class="float-md-start mb-0">Cover</h3>
+          <h3 class="float-md-start mb-0">itsbillw</h3>
           <nav class="nav nav-masthead justify-content-center float-md-end">
             <a
               class="nav-link fw-bold py-1 px-0 active"
@@ -125,7 +91,7 @@
               href="#"
               >Home</a
             >
-            <a class="nav-link fw-bold py-1 px-0" href="#">Features</a>
+            <a class="nav-link fw-bold py-1 px-0" href="#">Data</a>
             <a class="nav-link fw-bold py-1 px-0" href="#">Contact</a>
           </nav>
         </div>
@@ -148,8 +114,8 @@
       <footer class="mt-auto text-white-50">
         <p>
           Cover template for
-          <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>,
-          by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.
+          <a href="http://www.itsbillw.xyz/" class="text-white">itsbillw.xyz</a>,
+          by <a href="https://twitter.com/itsbillw" class="text-white">@itsbillw</a>.
         </p>
       </footer>
     </div>
